login시 usernameparam으로 id설정

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -75,7 +75,7 @@
         <div class="alert alert-danger">
             사용자ID 또는 비밀번호를 확인해 주세요.
             <!-- 로그인 실패 시 handleLoginFailure 함수 호출 -->
-            <script>handleLoginFailure();</script>
+<!--            <script>handleLoginFailure();</script>-->
         </div>
     </div>
     <div class="container position-relative pt-5 pb-5">
