240129 로그인 기능 세션이랑 admin,user 중.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,9 @@
 <section class="features-icons bg-light text-center">
     <div class="container">
         <div class="row">
+            <body>
+            session 값 확인 : <p th:text="${session.loginUser}"></p>
+            </body>
             <h2 class="mb-5">당신의 여행을 시작하세요!</h2>
             <div class="col-lg-4">
 
