plan 페이지 content 출력

--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -24,8 +24,7 @@
 <body>
 
 <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf"></script>
-<script th:inline="javascript">
-    /*<![CDATA[*/
+<script>
     $(document).ready(function() {
         initTmap();
     })
@@ -108,7 +107,7 @@
         });
 
         // var marker = new Tmapv2.Marker({
-        //     position: new Tmapv2.LatLng([[${touritem.mapx}]], [[${touritem.mapy}]]),
+        //     position: new Tmapv2.LatLng(mapx, mapy), 이러면될텐데 어떻게 컨텐츠에접근해야될지모르겠음
         //     icon:"https://tmapapi.sktelecom.com/upload/tmap/marker/pin_b_m_1.png",
         //     iconSize : new Tmapv2.Size(24, 38),
         //     map:map
@@ -261,8 +260,6 @@
         $('#map_div>div:eq(0)').children('div:eq(0)').css('width','100%');
         $('#map').toggleClass('wide');
     }
-
-    /*]]>*/
 </script>
 
 
