로그인 기능 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,8 +22,8 @@
 <!--            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">-->
 <!--                ${sessionScope.u_name}-->
 <!--            </form>-->
-            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" th:if="${session.loginUser != null}" th:text="${session.loginUser.name}"></div>
-            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" th:if="${session.loginUser == null}" >로그인 후 이용해주세요.</div>
+            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" sec:authorize="isAuthenticated()" th:text="${#authentication.principal.name + '님 환영합니다.'}" ></div>
+            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" sec:authorize="isAnonymous()" >로그인 후 이용해주세요.</div>
 
             <div class="dropdown text-end">
 
@@ -35,9 +35,11 @@
                         </a>
                         <ul class="dropdown-menu text-small" style="">
                             <li><a class="dropdown-item" sec:authorize="isAnonymous()"  href="/login">로그인</a>
-                                <a class="dropdown-item" sec:authorize="isAuthenticated()"  href="/login">로그아웃</a></li>
+                                <a class="dropdown-item" sec:authorize="isAuthenticated()"  href="/logout">로그아웃</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="/join">회원가입</a></li>
+                            <li><a class="dropdown-item" sec:authorize="isAnonymous()" href="/join">회원가입</a>
+                                <a class="dropdown-item" sec:authorize="isAuthenticated()"  href="/mypage">마이페이지</a></li>
+                            </li>
                         </ul>
 <!--                    </c:when>-->
 
