--- a/src/main/resources/templates/fragments/searchheader.html
+++ b/src/main/resources/templates/fragments/searchheader.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -22,8 +22,8 @@
 <!--            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">-->
 <!--                ${sessionScope.u_name}-->
 <!--            </form>-->
-            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" th:if="${session.loginUser != null}" th:text="${session.loginUser.name}"></div>
-            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" th:if="${session.loginUser == null}" >로그인 후 이용해주세요.</div>
+            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" sec:authorize="isAuthenticated()" th:text="${#authentication.principal.name + '님 환영합니다.'}" ></div>
+            <div class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" sec:authorize="!isAuthenticated()" >로그인 후 이용해주세요.</div>
 
             <div class="dropdown text-end">
 
@@ -34,9 +34,11 @@
                             <i class="bi bi-person-circle text-dark"></i>
                         </a>
                         <ul class="dropdown-menu text-small" style="">
-                            <li><a class="dropdown-item" href="/login">로그인</a></li>
+                            <li><a class="dropdown-item" sec:authorize="isAnonymous()"  href="/login">로그인</a>
+                                <a class="dropdown-item" sec:authorize="isAuthenticated()"  href="/logout">로그아웃</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="/join">회원가입</a></li>
+                            <li><a class="dropdown-item" sec:authorize="isAnonymous()" href="/join">회원가입</a>
+                                <a class="dropdown-item" sec:authorize="isAuthenticated()"  href="/mypage">마이페이지</a></li>
                         </ul>
 <!--                    </c:when>-->
 
